Setting up the app skeleton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<header>
-  <nav-bar></nav-bar>
-</header>
-
-Daa!
+<!-- Content rendering within the framing components like FooterOnlyFrame -->
 <router-outlet>
-
 </router-outlet>
