--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,10 @@
-<p>
-    sign-up works!
-</p>
 
-xxx
+<mat-card class="card-signup"> 
+    <mat-card-title>
+        Create an account
+    </mat-card-title>
+
+    <mat-card-content>
+        <app-sign-up-form></app-sign-up-form>
+    </mat-card-content>
+</mat-card>
