--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,15 +1,25 @@
 <mat-sidenav-container class="sidenav-container">
+
   <mat-sidenav #drawer class="sidenav" fixedInViewport
+      fxLayout="column" fxFlex
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+    <mat-nav-list fxLayoutAlign="center center">
+      <a mat-list-item href="#">Dashboard</a>
+      <a mat-list-item href="#">About</a>
+      <a mat-list-item href="#">Support</a>
     </mat-nav-list>
+
+    <mat-divider></mat-divider>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/">Logout</a>
+    </mat-nav-list>
+    <mat-divider></mat-divider>
+
   </mat-sidenav>
+
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button
@@ -27,5 +37,9 @@
     <router-outlet>
     </router-outlet>
 
+    <app-footer></app-footer>
+
   </mat-sidenav-content>
+
+
 </mat-sidenav-container>
