Adding user model and user service.

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
 
     <mat-divider></mat-divider>
     <mat-nav-list>
-      <a mat-list-item routerLink="/">Logout</a>
+      <a mat-list-item (click)="logout()">Logout</a>
     </mat-nav-list>
     <mat-divider></mat-divider>
 
