Added a demostration of E2E tests we are looking to see

--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="user-dashboard">
     <p>
-        Welcome <strong>{{ getFullName() }}!</strong>
+        Welcome <strong class="span-user-full-name">{{ getFullName() }}</strong>!
     </p>
 </div>
