--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -14,6 +14,11 @@
         <mat-label>Password</mat-label>
         <input matInput formControlName="password">
     </mat-form-field>
+    <!-- add new tag html-->
+    <mat-form-field class="form-element">
+        <mat-label>Phone</mat-label>
+        <input matInput placeholder="+32514525" formControlName="phone">
+    </mat-form-field>
 
     <div class="form-element">
         <button mat-raised-button color="primary" type="submit" class="button">Sign up</button>
