--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -1,4 +1,11 @@
 .card-signup {
-    max-width: 600px;
+    max-width: 400px;
     margin: 0 auto;
+    opacity: 0.8;
+}
+
+.back {
+    max-width: 400px;
+    margin: 0 auto;
+    background-image: url("../../assets/img/videojuego.jpeg");
 }
