--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,10 +1,11 @@
+<div class="back">
+    <mat-card class="card-signup">
+        <mat-card-title>
+            Create an account
+        </mat-card-title>
 
-<mat-card class="card-signup"> 
-    <mat-card-title>
-        Create an account
-    </mat-card-title>
-
-    <mat-card-content>
-        <app-sign-up-form></app-sign-up-form>
-    </mat-card-content>
-</mat-card>
+        <mat-card-content>
+            <app-sign-up-form></app-sign-up-form>
+        </mat-card-content>
+    </mat-card>
+</div>
