--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,10 +1,35 @@
+<div style="position: relative;">
+    <!--div used because toast move all elements to the bottom-->
 
-<mat-card class="card-signup"> 
-    <mat-card-title>
-        Create an account
-    </mat-card-title>
+    <!-- Toast -->
+    <div class="toast" data-delay="3500" style="position: absolute; top: 0; right: 0; z-index: 99999; width: 20%;">
+        <div class="toast-header">
+            <img src="https://image.flaticon.com/icons/svg/845/845646.svg" class="responsive_img">
+            <strong class="mr-auto ml-2">Phone registered</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            {{user?.phoneNumber}}
+        </div>
+    </div>
 
-    <mat-card-content>
-        <app-sign-up-form></app-sign-up-form>
-    </mat-card-content>
-</mat-card>
+    <mat-card class="card-signup">
+        <mat-card-title>
+            Create an account
+        </mat-card-title>
+
+        <mat-card-content>
+            <app-sign-up-form (user_registered)="showToast($event)"></app-sign-up-form>
+        </mat-card-content>
+    </mat-card>
+
+</div>
+
+<style>
+    .responsive_img {
+        max-width: 17%;
+        height: auto;
+    }
+</style>
