--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,5 +1,12 @@
 <div class="user-dashboard">
-    <p>
+
+    <h2>
         Welcome <strong class="span-user-full-name">{{ getFullName() }}</strong>!
+    </h2>
+
+    <p>Your user account details</p>
+
+    <p>
+        <strong class="label">Email:</strong> <span>{{ getEmail() }}</span>
     </p>
 </div>
