--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-    This is an frontend software development interview exercise by <a href="https://twitter.com/moo9000">Mikko Ohtamaa</a>
+    This is an frontend software development interview exercise for <a href="https://firstblood.io">FirstBlood Technologies</a>.
 </footer>
